expo-envoy-filter/expo-envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: expo-ae-filter
  namespace: experience-tools
spec:
  workloadSelector:
    labels:
      app: expo-echo-server
  configPatches:
  # The first patch adds the lua filter to the listener/http connection manager
  
  - applyTo: HTTP_FILTER
    match:
      context: SIDECAR_INBOUND
      proxy:
        proxyVersion: '^1\.6.*'
      listener:
        filterChain:
          filter:
            name: "envoy.http_connection_manager"
            subFilter:
              name: "envoy.router"
    patch:
      operation: INSERT_BEFORE
      value: 
        name: envoy.filters.http.wasm
        config:
          config:
            name: "expo_filter_name"
            root_id: "expo_filter_root_id"
            configuration: '{ "header_name": "x-wmt-expo", "header_append_value": "INJECTED_ON_PLUGIN" }'
            vm_config:
              vm_id: "my_vm_id"
              runtime: "envoy.wasm.runtime.v8"
              allow_precompiled: false
              code:
                remote:
                  http_uri:
                    uri: http://expo-filter-provider/filter/files/untouched.wasm
                    cluster: outbound|8080||expo-filter-provider.experience-tools.svc.cluster.local
                    timeout: 3s
                  sha256: 2a987eafc28836b42e85943325791c6f9b5a087316f68a03aa6c2c06b6c41285
